Use virtual threads for concurrency and update SP500 ticker list